Refactor `MultiComponentLoader`: Replace lambda variable `k` with `_` and fix incorrect factory method call.