@@ -53,7 +53,7 @@ public final class MultiComponentLoader {
 		Objects.requireNonNull(targetClass, "targetClass cannot be null");
 		Objects.requireNonNull(dependencies, "dependencies cannot be null");
 
-		synchronized (LOCKS.computeIfAbsent(targetClass, k -> new Object())) {
+		synchronized (LOCKS.computeIfAbsent(targetClass, _ -> new Object())) {
 			final List<ComponentFactory<T>> componentFactories = createComponentFactories(targetClass);
 			final List<T> results = new ArrayList<>(componentFactories.size());
 
@@ -82,7 +82,7 @@ public final class MultiComponentLoader {
 		Objects.requireNonNull(targetClass, "targetClass cannot be null");
 		Objects.requireNonNull(instances, "instances cannot be null");
 
-		synchronized (LOCKS.computeIfAbsent(targetClass, k -> new Object())) {
+		synchronized (LOCKS.computeIfAbsent(targetClass, _ -> new Object())) {
 			final List<ComponentFactory<T>> componentFactories = createComponentFactories(targetClass);
 			final List<T> disposedComponents = new ArrayList<>(instances.size());
 
@@ -91,7 +91,7 @@ public final class MultiComponentLoader {
 				// Match instance to factory by index if sizes match, otherwise use first factory
 				ComponentFactory<T> factory = i < componentFactories.size()
 						? componentFactories.get(i)
-						: componentFactories.get(0);
+						: componentFactories.getFirst();
 				T disposed = factory.disposeComponent(instance);
 				disposedComponents.add(disposed);
 			}
